# Shiftago-Qt

./: .gitignore  LICENSE.txt  README.md  entry_point.py  make_dist.bat  pyinstaller_build_hooks.py  pyproject.toml  shiftago-qt.cfg
shiftago/: __main__.py  app_config.py
shiftago/core/: __init__.py  ai_engine.py  express.py  express_ai.py  winning_line.py
shiftago/ui/: __init__.py  app_events.py  board_controller.py  board_view.py  board_view_model.py  game_model.py  hmvc.py  main_window.py  shiftago_qt_express.py
tests/: __init__.py  core_test.py  express_ai_test.py  express_test.py
tests/data/: board1.json  board1.txt  board2.json  board2.txt  board3.json  board3.txt  express_ai_test1.json  express_ai_test2.json  express_ai_test3.json  express_ai_test4.json
