[tool.poetry]
name = "shiftago-qt"
version = "0.1.0"
description = ""
authors = ["Thomas Schaper <genius.magnus@tuta.com>"]
readme = "README.md"
packages = [{include = "shiftago_qt"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-statemachine = "^2.1.2"
pyinstaller = "^6.3.0"
pyside6 = "^6.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
