[tool.poetry]
name = "shiftago-qt"
version = "0.1.0"
description = "Shiftago-Qt is a Qt-based implementation of the Shiftago board game."
authors = ["Thomas Schaper <genius.magnus@tuta.com>"]
readme = "README.md"
packages = [{include = "shiftago"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
python-statemachine = "^2.1.2"
pyside6 = "^6.6.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-pyinstaller-plugin]
use-poetry-install = "true"
post-build = "pyinstaller_build_hooks:post_build"

[tool.poetry-pyinstaller-plugin.scripts]
shiftago_qt = { source = "entry_point.py", type = "onefile", windowed = "false", add_version = "true", bundle = "false" }

[tool.poetry-pyinstaller-plugin.include]
"shiftago/ui/images/*" = "shiftago/ui/images"
